--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                 </span>
                 <span class="team1">
                     <span>Netherland</span>
-                    <span><img src="images/soccer/Netherland.png alt="team-image"></span>
+                    <span><img src="images/soccer/Netherland.png" alt="team-image"></span>
                 </span>
         </span>
        
@@ -287,7 +287,7 @@
                 </span>
                 <span class="team1">
                     <span>Mexico</span>
-                    <span><img src="images/soccer/Mexico.png alt="team-image"></span>
+                    <span><img src="images/soccer/Mexico.png" alt="team-image"></span>
                 </span>
         </span>
        
