--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
                         <div class="tab-pane fade in active" id="2017" role="tabpanel">
                             <table class="standing-full">
                                 <tr>
-                                    <th>club</th>
+                                    <th>team</th>
                                     <th>played</th>
                                     <th>won</th>
                                     <th>drawn</th>
@@ -354,34 +354,34 @@
                                 </tr>
                                 <tr>
                                     <td class="up">
-                                        <i class="fa fa-caret-up" aria-hidden="true"></i> 1 <span class="team"><img src="images/soccer/Germany.png" width="30" height="30" alt="team-logo"> </span>Germany
+                                        <i class="fa fa-caret-up" aria-hidden="true"></i> 1 <span class="team"><img src="images/soccer/Belgium.png" width="30" height="30" alt="team-logo"> </span>Belgium
                                     </td>
+                                    <td>3</td>
+                                    <td>1</td>
                                     <td>2</td>
-                                    <td>1</td>
-                                    <td>1</td>
                                     <td>0</td>
-                                    <td>+2</td>
+                                    <td>+5</td>
                                     <td class="points"><span>4</span></td>
                                     <td class="form">
-                                        <span class="win">w</span>
                                         <span class="drawn">d</span>
+                                        <span class="drawn">d</span>
+                                        <span class="win">w</span>   
                                         <!-- <span class="lose">l</span>
-                                        <span class="win">w</span>
-                                        <span class="win">w</span> -->
                                     </td>
                                     <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo2.png" width="30" height="30" alt="team-logo"></a></td> -->
                                 </tr>
                                 <tr>
                                     <td class="down">
-                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Mexico.png" width="30" height="30" alt="team-logo"> </span>Mexico
+                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Portugal.png" width="30" height="30" alt="team-logo"> </span>Portugal
                                     </td>
+                                    <td>2</td>
                                     <td>1</td>
                                     <td>1</td>
                                     <td>0</td>
-                                    <td>0</td>
-                                    <td>+1</td>
+                                    <td>+5</td>
                                     <td class="points"><span>3</span></td>
                                     <td class="form">
+                                        <span class="drawn">d</span>
                                         <span class="win">w</span>
                                         <!-- <span class="drawn">d</span>
                                         <span class="lose">l</span>
@@ -392,18 +392,18 @@
                                 </tr>
                                 <tr>
                                     <td class="down">
-                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Belgium.png" width="30" height="30" alt="team-logo"> </span>Belgium
+                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Germany.png" width="30" height="30" alt="team-logo"> </span>Germany
                                     </td>
                                     <td>2</td>
+                                    <td>1</td>
+                                    <td>1</td>
                                     <td>0</td>
-                                    <td>2</td>
-                                    <td>0</td>
-                                    <td>+0</td>
+                                    <td>+2</td>
                                     <td class="points"><span>2</span></td>
                                     <td class="form">
-                                        <!-- <span class="win">w</span> -->
+                                        <span class="win">w</span>
                                         <span class="drawn">d</span>
-                                        <span class="drawn">d</span>
+                                        <!-- <span class="drawn">d</span> -->
                                         <!-- <span class="lose">l</span>
                                         <span class="win">w</span>
                                         <span class="win">w</span> -->
@@ -412,16 +412,16 @@
                                 </tr>
                                 <tr>
                                     <td class="down">
-                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Portugal.png" width="30" height="30" alt="team-logo"> </span>Portugal
+                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Mexico.png" width="30" height="30" alt="team-logo"> </span>Mexico
                                     </td>
                                     <td>1</td>
-                                    <td>0</td>
                                     <td>1</td>
                                     <td>0</td>
-                                    <td>+0</td>
+                                    <td>0</td>
+                                    <td>+1</td>
                                     <td class="points"><span>1</span></td>
                                     <td class="form">
-                                        <!-- <span class="win">w</span> -->
+                                        <span class="win">w</span>
                                         <span class="drawn">d</span>
                                         <!-- <span class="lose">l</span>
                                         <span class="win">w</span>
@@ -435,7 +435,7 @@
                                     </td>
                                     <td>1</td>
                                     <td>0</td>
-                                    <td>0</td>
+                                    <td>1</td>
                                     <td>1</td>
                                     <td>-2</td>
                                     <td class="points"><span>0</span></td>
@@ -443,6 +443,7 @@
                                         <!-- <span class="win">w</span>
                                         <span class="drawn">d</span> -->
                                         <span class="lose">l</span>
+                                        <span class="drawn">d</span>
                                         <!-- <span class="win">w</span>
                                         <span class="win">w</span> -->
                                     </td>
@@ -452,15 +453,17 @@
                                     <td class="none">
                                         <i class="fa fa-circle" aria-hidden="true"></i> 3 <span class="team"><img src="images/soccer/Netherland.png" width="30" height="30" alt="team-logo"> </span>Netherland
                                     </td>
-                                    <td>1</td>
+                                    <td>3</td>
                                     <td>0</td>
                                     <td>0</td>
-                                    <td>1</td>
-                                    <td>-1</td>
+                                    <td>3</td>
+                                    <td>-11</td>
                                     <td class="points"><span>0</span></td>
                                     <td class="form">
                                         <!-- <span class="win">w</span>
                                         <span class="drawn">d</span> -->
+                                        <span class="lose">l</span>
+                                        <span class="lose">l</span>
                                         <span class="lose">l</span>
                                         <!-- <span class="win">w</span>
                                         <span class="win">w</span> -->
