--- a/index.html
+++ b/index.html
@@ -312,7 +312,26 @@
         </span>
        
     </a>
+    <a href="#" class="item">
+        <span class="championship">Paikpara World Cup 2022</span>
+        <span class="teams-wrap">
+                <span class="team">
+                    <span>
+                        <img src="images/soccer/Mexico.png" alt="team-image">
+                    </span>
+                    <span>Mexico</span>
+                </span>
+                <span class="score">
+                    <span>1:1</span>
 
+                </span>
+                <span class="team1">
+                    <span>Portugal</span>
+                    <span><img src="images/soccer/Portugal.png" alt="team-image"></span>
+                </span>
+        </span>
+       
+    </a>
 </div>
                 </div>
             <!-- latest match Enbd-->
@@ -354,14 +373,14 @@
                                 </tr>
                                 <tr>
                                     <td class="up">
-                                        <i class="fa fa-caret-up" aria-hidden="true"></i> 1 <span class="team"><img src="images/soccer/Belgium.png" width="30" height="30" alt="team-logo"> </span>Belgium
+                                        <i class="fa fa-circle" aria-hidden="true"></i> 1 <span class="team"><img src="images/soccer/Belgium.png" width="30" height="30" alt="team-logo"> </span>Belgium
                                     </td>
                                     <td>3</td>
                                     <td>1</td>
                                     <td>2</td>
                                     <td>0</td>
                                     <td>+5</td>
-                                    <td class="points"><span>4</span></td>
+                                    <td class="points"><span>5</span></td>
                                     <td class="form">
                                         <span class="drawn">d</span>
                                         <span class="drawn">d</span>
@@ -371,18 +390,19 @@
                                     <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo2.png" width="30" height="30" alt="team-logo"></a></td> -->
                                 </tr>
                                 <tr>
-                                    <td class="down">
-                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Portugal.png" width="30" height="30" alt="team-logo"> </span>Portugal
+                                    <td class="up">
+                                        <i class="fa fa-circle" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Portugal.png" width="30" height="30" alt="team-logo"> </span>Portugal
                                     </td>
+                                    <td>3</td>
+                                    <td>1</td>
                                     <td>2</td>
-                                    <td>1</td>
-                                    <td>1</td>
                                     <td>0</td>
                                     <td>+5</td>
-                                    <td class="points"><span>3</span></td>
+                                    <td class="points"><span>5</span></td>
                                     <td class="form">
                                         <span class="drawn">d</span>
                                         <span class="win">w</span>
+                                        <span class="drawn">d</span>
                                         <!-- <span class="drawn">d</span>
                                         <span class="lose">l</span>
                                         <span class="win">w</span>
@@ -391,15 +411,35 @@
                                     <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo1.png" width="30" height="30" alt="team-logo"></a></td> -->
                                 </tr>
                                 <tr>
-                                    <td class="down">
-                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Germany.png" width="30" height="30" alt="team-logo"> </span>Germany
+                                    <td class="up">
+                                        <i class="fa fa-circle" aria-hidden="true"></i> 3 <span class="team"><img src="images/soccer/Mexico.png" width="30" height="30" alt="team-logo"> </span>Mexico
+                                    </td>
+                                    <td>3</td>
+                                    <td>1</td>
+                                    <td>2</td>
+                                    <td>0</td>
+                                    <td>+1</td>
+                                    <td class="points"><span>5</span></td>
+                                    <td class="form">
+                                        <span class="win">w</span>
+                                        <span class="drawn">d</span>
+                                        <span class="drawn">d</span>
+                                        <!-- <span class="lose">l</span>
+                                        <span class="win">w</span>
+                                        <span class="win">w</span> -->
+                                    </td>
+                                    <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo3.png" width="30" height="30" alt="team-logo"></a></td> -->
+                                </tr>
+                                <tr>
+                                    <td class="up">
+                                        <i class="fa fa-circle" aria-hidden="true"></i> 4 <span class="team"><img src="images/soccer/Germany.png" width="30" height="30" alt="team-logo"> </span>Germany
                                     </td>
                                     <td>2</td>
                                     <td>1</td>
                                     <td>1</td>
                                     <td>0</td>
                                     <td>+2</td>
-                                    <td class="points"><span>2</span></td>
+                                    <td class="points"><span>4</span></td>
                                     <td class="form">
                                         <span class="win">w</span>
                                         <span class="drawn">d</span>
@@ -410,35 +450,17 @@
                                     </td>
                                     <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo4.png" width="30" height="30" alt="team-logo"></a></td> -->
                                 </tr>
+
                                 <tr>
                                     <td class="down">
-                                        <i class="fa fa-caret-down" aria-hidden="true"></i> 2 <span class="team"><img src="images/soccer/Mexico.png" width="30" height="30" alt="team-logo"> </span>Mexico
-                                    </td>
-                                    <td>1</td>
-                                    <td>1</td>
-                                    <td>0</td>
-                                    <td>0</td>
-                                    <td>+1</td>
-                                    <td class="points"><span>1</span></td>
-                                    <td class="form">
-                                        <span class="win">w</span>
-                                        <span class="drawn">d</span>
-                                        <!-- <span class="lose">l</span>
-                                        <span class="win">w</span>
-                                        <span class="win">w</span> -->
-                                    </td>
-                                    <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo3.png" width="30" height="30" alt="team-logo"></a></td> -->
-                                </tr>
-                                <tr>
-                                    <td class="none">
                                         <i class="fa fa-circle" aria-hidden="true"></i> 3 <span class="team"><img src="images/soccer/England_flag.png" width="30" height="30" alt="team-logo"> </span>England
                                     </td>
-                                    <td>1</td>
+                                    <td>2</td>
                                     <td>0</td>
                                     <td>1</td>
                                     <td>1</td>
                                     <td>-2</td>
-                                    <td class="points"><span>0</span></td>
+                                    <td class="points"><span>1</span></td>
                                     <td class="form">
                                         <!-- <span class="win">w</span>
                                         <span class="drawn">d</span> -->
@@ -450,7 +472,7 @@
                                     <!-- <td><a href="club-stats.html"><img src="images/soccer/team-logo1.png" width="30" height="30" alt="team-logo"></a></td> -->
                                 </tr>
                                 <tr>
-                                    <td class="none">
+                                    <td class="down">
                                         <i class="fa fa-circle" aria-hidden="true"></i> 3 <span class="team"><img src="images/soccer/Netherland.png" width="30" height="30" alt="team-logo"> </span>Netherland
                                     </td>
                                     <td>3</td>
@@ -542,10 +564,10 @@
                         </ul> -->
                         <ul class="socials">
                             <li><a href="https://web.facebook.com/scpaikpara"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                            <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-google" aria-hidden="true"></i></a></li>
                             <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
-                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                            <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li> -->
                         </ul>
                     </div>
                 </div>
