--- a/index.html
+++ b/index.html
@@ -580,7 +580,7 @@
             <div class="row">
                 <div class="col-xs-6">
                     <div class="copyrights">
-                        <a target="_blank" href="index.html">Sporting Club Paikpara</a>
+                        <a target="_blank" href="index.html">Sporting Club Paikpara|Developed by ABdullah Sarder</a>
                     </div>
                 </div>
                 <div class="col-xs-6">
